feat: correct images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <time id="time"></time>
+    <div class="time-container">
+      <time id="time"></time>
+    </div>
     <h1>
       <span id="greeting">Maksim</span>
       <span id="name" contenteditable="true"></span>
