feat: add span style

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <time id="time"></time>
     </div>
     <h1>
-      <span id="greeting">Maksim</span>
-      <span id="name" contenteditable="true"></span>
+      <h2 id="greeting"></h2>
+      <span id="name" contenteditable="true" placeholder="Enter Your Name"></span>
     </h1>
     <h2>What is Your Focus Today?</h2>
     <h2 id="focus" contenteditable="true"></h2>
