feat: add weather api

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="weather-container">
+      
+    </div>
     <div class="time-container">
       <time id="time"></time>
     </div>
