feat: add button refresh background

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="btn-refresh">
+        <button class="btn"></button>
+      </div>
       <div class="weather-container">
         <div class="city-search">
           <input class="city-input" type="text" autocomplete="off" placeholder="Search a city" />
