--- a/index.html
+++ b/index.html
@@ -8,32 +8,21 @@
       href="https://fonts.googleapis.com/css2?family=Lemonada:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/owfont-regular.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="wrapper">
-      <div class="btn-refresh">
-        <button class="btn"></button>
-      </div>
-      <div class="weather-container">
-        <div class="city-search">
-          <input class="city-input" type="text" autocomplete="off" placeholder="Search a city" />
+      <div class="top-container">
+        <div class="btn-refresh">
+          <button class="btn"></button>
         </div>
-        <section class="weather-content">
-          <div class="location">
-            <div class="location__city"></div>
-          </div>
-          <div class="weather">
-            <div class="weather__temperature"></div>
-            <div class="weather__current"></div>
-            <i class="weather__icon"></i>
-            <span class="weather__wind"></span>
-          </div>
-          <div class="humidity">
-            <i class="humidity__icon"></i>
-            <span class="humidity__text"></span>
-          </div>
-        </section>
+        <div class="weather-container">
+          <div class="city" contenteditable="true">Минск</div>
+          <i class="weather-icon owf"></i>
+          <div class="temperature"></div>
+          <div class="weather-description"></div>
+        </div>
       </div>
       <div class="clock">
         <div class="time-container">
