--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="weather-container">
-        <div class="city" contenteditable="true">Минск</div>
+        <div id="city" class="city" contenteditable="true">[Enter the City]</div>
         <i class="weather-icon owf"></i>
         <div class="temperature"></div>
         <div class="weather-description"></div>
